--- a/samsungctl.conf
+++ b/samsungctl.conf
@@ -2,7 +2,7 @@
 	"name": "samsungctl",
 	"description": "PC",
 	"id": "",
-	"method": "legacy",
-	"port": 55000,
+	"method": "pin",
+	"port": 8000,
 	"timeout": 0
 }
